--- a/major.html
+++ b/major.html
@@ -12,7 +12,7 @@
 
 <h1 class="text-2xl font-bold mb-4 text-center">진입 가능 전공</h1>
 
-<img src="images/major.png" class="rounded">
+<img src="images/major2.png" class="rounded">
 
 </div>
 
